<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/weather_background"
    tools:context=".WheatherController">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_location"
        android:id="@+id/locationTV"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="90sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temp"
        android:id="@+id/tempTV"
        android:layout_below="@+id/changeCityButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeCityButton"
        android:src="@drawable/change_city_symbol_small"
        android:contentDescription="@string/change_city_description"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/weatherSymbol"
            android:src="@drawable/dunno"
            android:contentDescription="@string/weather_description"

            />
    </FrameLayout>

</RelativeLayout>