<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/city_background"
    tools:context=".ChangeCityController">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:src="@drawable/left"
        android:background="@null"
        android:contentDescription="@string/back_button_description"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/default_query"
        android:background="#FFFFFF"
        android:textSize="30sp"
        android:inputType="textAutoCorrect"
        android:id="@+id/queryET"
        android:textColor="#000000"
        android:imeOptions="actionGo"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_weather"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/getWeatherTV"
        android:layout_below="@+id/backButton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>